--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,52 +5,46 @@
 
 <div class="container">
 
-  <div class="tab-panel">
+  <tab-panel>
 
-      <ul class="tab-panel-buttons">
-          <li class="selected">Login</li>
-          <li>Sign Up</li>
-          <li>Contact</li>
-      </ul>
+     <app-tab title="Login">
+        <form>
+            <div class="form-field">
+                <label>Email:</label><input>
+            </div>
+            <div class="form-field">
+                <label>Password:</label><input>
+            </div>
+        </form>
+     </app-tab>
 
-      <div class="tab">
-          <form>
-              <div class="form-field">
-                  <label>Email:</label><input>
-              </div>
-              <div class="form-field">
-                  <label>Password:</label><input>
-              </div>
-          </form>
-      </div>
+     <app-tab title="Sign Up">
+        <form>
+            <div class="form-field">
+                <label>Email:</label><input>
+            </div>
+            <div class="form-field">
+                <label>Password:</label><input>
+            </div>
+            <div class="form-field">
+                <label>Confirm Password:</label><input>
+            </div>
+        </form>
+     </app-tab>
 
-      <div class="tab">
-          <form>
-              <div class="form-field">
-                  <label>Email:</label><input>
-              </div>
-              <div class="form-field">
-                  <label>Password:</label><input>
-              </div>
-              <div class="form-field">
-                  <label>Confirm Password:</label><input>
-              </div>
-          </form>
-      </div>
+     <app-tab title="Contact">
+        <form>
+            <div class="form-field">
+                <label>Email:</label><input>
+            </div>
+            <div class="form-field">
+                <label>Message:</label>
+                <textarea></textarea>
+            </div>
+        </form>
+     </app-tab>
 
-      <div class="tab">
-          <form>
-              <div class="form-field">
-                  <label>Email:</label><input>
-              </div>
-              <div class="form-field">
-                  <label>Message:</label>
-                  <textarea></textarea>
-              </div>
-          </form>
-      </div>
-
-  </div>
+  </tab-panel>
 
 
 </div>
