--- a/src/app/tab-panel/tab-panel.component.html
+++ b/src/app/tab-panel/tab-panel.component.html
@@ -1,12 +1,10 @@
 <div class="tab-panel">
 
-        <ul class="tab-panel-buttons">
-            <li class="selected">Login</li>
-            <li>Sign Up</li>
-            <li>Contact</li>
-        </ul>
+    <ul class="tab-panel-buttons" *ngIf="tabs">
+        <li [ngClass]="{selected: tab.selected}" *ngFor="let tab of tabs" (click)="selectTab(tab)">{{tab.title}}</li>
+    </ul>
 
-        <ng-content></ng-content>
-        
+    <ng-content></ng-content>
 
-    </div> 
+
+</div>
